--- a/pages/productos.html
+++ b/pages/productos.html
@@ -11,6 +11,7 @@
 <body>
     <header id="header"></header>
     <main id="main">
+        <div><h2 class="">Productos</h2></div>
         <div id="prodWrapper" class="container mt-4"></div>
     </main>
     <footer id="footer"></footer>
