botones de sumar cantidad agregados

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <nav class="navbar navbar-expand-xl navbar-light nohover">
-            <div class="container-fluid">
+            <div class="container-fluid bgcolor">
                 <a class="navbar-brand" href="#"><img src="../assets/greenhoop.jpg" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,11 +25,10 @@
                     <li class="nav-item">
                     <a class="nav-link" href="./pages/carrito.html">Carrito</a>
                     </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                    <button class="btn btn-outline-primary" type="submit">Buscar</button>
-                </form>
                 </div>
             </div>
             </nav>
