--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -12,8 +12,8 @@
 <body>
     <header id="header">
         <nav class="navbar navbar-expand-xl navbar-light nohover">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../assets/greenhoop.jpg" alt="logo"></a>
+            <div class="container-fluid bgcolor">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/greenhoop.jpg" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,6 +24,9 @@
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="#">Carrito</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
                     </li>
                 </ul>
                 
