--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-xl navbar-light nohover">
-            <div class="container-fluid bgcolor">
+        <div class="bgcolordark"></div>
+        <nav class="navbar navbar-expand-xl navbar-light nohover p-0">
+            <div class="container-fluid bgcolorlight">
                 <a class="navbar-brand" href="../index.html"><img src="../assets/greenhoop.jpg" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,15 +36,16 @@
             </nav>
     </header>
     <main id="main">
-        <div><h2>Carrito</h2></div>
+        <div><h2 class="fontstd">Carrito</h2></div>
         <div class="container mt-4">
             <div id="carritoRow"></div>
         </div>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footy"></footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="../js/carrito.js"></script>
+    <script src="../js/footerpages.js"></script>
 </body>
 </html>
