--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-xl navbar-light nohover">
-            <div class="container-fluid bgcolor">
+        <div class="bgcolordark"></div>
+        <nav class="navbar navbar-expand-xl navbar-light nohover p-0">
+            <div class="container-fluid bgcolorlight">
                 <a class="navbar-brand" href="../index.html"><img src="../assets/greenhoop.jpg" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLight" aria-controls="navbarLight" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,13 +24,12 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./carrito.html">Carrito</a>
+                    <a class="nav-link" href="#">Carrito</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
                     </li>
                 </ul>
-                
                 </div>
             </div>
             </nav>
@@ -37,10 +37,11 @@
     <main id="main">
         
     </main>
-    <footer id="footer"></footer>
+    <footer id="footy"></footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="../js/contacto.js"></script>
+    <script src="../js/footerpages.js"></script>
 </body>
 </html>
