--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -36,16 +36,16 @@
             </nav>
     </header>
     <main id="main">
-        <div><h2 class="fontstd">Carrito</h2></div>
-        <div class="container mt-4">
-            <div id="carritoRow"></div>
-        </div>
+        <div><h2 class="fontstd">Carrito</h2><span><button id="botonFinalizar" class="btn btn-success btn-xl ms-5 d-md-block">Finalizar Compra</button></span></div>
+        <div id="cartWrapper" class="row container mt-4"></div>
     </main>
     <footer id="footy"></footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="../js/carrito.js"></script>
+    <script src="../js/finalizarcompra.js"></script>
     <script src="../js/footerpages.js"></script>
 </body>
 </html>
