--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,19 +24,19 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Carrito</a>
+                    <a class="nav-link" href="./carrito.html">Carrito</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                    <a class="nav-link" href="#">Contacto</a>
                     </li>
                 </ul>
                 </div>
             </div>
             </nav>
     </header>
-    <main id="main" class="bgimagecontact">
+    <main id="main contactcontainer" class="bgimagecontact">
         <div><h2 class="fontstd">Contacto</h2></div>
-        <form id="contactform">
+        <form class="contactform" id="contactform">
             <div class="mb-3 mt-3 w-25 ms-3">
                 <input type="text" class="form-control" id="nombre" placeholder="Nombre">
             </div>
@@ -52,8 +52,8 @@
                 <option value="1">Argentina</option>
                 <option value="2">Chile</option>
                 <option value="3">Uruguay</option>
-                <option value="3">Brasil</option>
-                <option value="3">Mexico</option>
+                <option value="4">Brasil</option>
+                <option value="5">Mexico</option>
             </select>
             <div class="mb-3 w-25 ms-3">
                 <textarea class="form-control" id="mensajecontacto" rows="5" placeholder="Dejenos su mensaje..."></textarea>
@@ -62,11 +62,12 @@
                 <button class="btn btn-outline-success" type="button">Enviar</button>
             </div>
         </form>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496.0992022369395!2d-60.32689234137906!3d-33.23128165693679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b76c6aa6c67f85%3A0xc84e4570e41024d6!2sAv.%20San%20Mart%C3%ADn%201668%2C%20S2919%20Villa%20Constituci%C3%B3n%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1725576505056!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="frame1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d496.0992022369395!2d-60.32689234137906!3d-33.23128165693679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b76c6aa6c67f85%3A0xc84e4570e41024d6!2sAv.%20San%20Mart%C3%ADn%201668%2C%20S2919%20Villa%20Constituci%C3%B3n%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1725576505056!5m2!1ses!2sar" width="600" height="450" style="border: 3px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer id="footy"></footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="../js/contacto.js"></script>
     <script src="../js/footerpages.js"></script>
